# nrf52l

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  FreeRTOS_gcc_nrf52.ld  Makefile  README.md  createdfu.bat  createdfu.py  gcc_nrf52.ld  getversion.bat  nrf53l.ld  pins.txt  prog.bat
.externalToolBuilders/: Get_version.launch  JsWrapper.launch
config/: FreeRTOSConfig.h  custom_board.h  sdk_config.h
src/: .gitignore  battery.c  battery.h  ble_lserv.c  ble_lserv.h  bluetooth.c  bluetooth.h  buzzer.c  buzzer.h  control.c  control.h  custom_service.c  custom_service.h  fs.c  fs.h  js_module.c  js_module.h  leds.c  leds.h  main.c  pca9685.c  pca9685.h  r0b1c_cmd.c  r0b1c_cmd.h  r0b1c_service.c  r0b1c_service.h  rj_port.c  rj_port.h  rtt_cli.c  rtt_cli.h  swo_log.c  tft_btn.c  tft_btn.h  twi_mngr.c  twi_mngr.h  wedo2.c  wedo2.h
src/Espruino/: esp_flash.c  esp_impl.c  esp_impl.h  jspininfo.c  jspininfo.h  jswrapper.c  platform_config.h
src/Lua/: nlua.c  nlua.h  platform_conf.h  type.h
src/devices/: battery.c  button.c  dummy.c  gyro.c  jswrap_led.c  jswrap_led.h  jswrap_motor.c  jswrap_motor.h  jswrap_range.c  jswrap_range.h  motor.c  r0b1c_device.c  r0b1c_device.h  range.c  rdev_btn.c  rdev_led.c  rdev_led.h  rdev_proto.h  rj_port.c  rj_port.h
src/js/: jshardware.c  jsnative.c  jsparse.c  jsutils.c  jsvar.c  jswrap_board.c  jswrap_board.h  jswrap_date.c  jswrap_json.c  jswrap_modules.c  jswrap_object.c  jswrap_process.c  jswrapper.c
src/js/devices/: jswrap_port.c  jswrap_port.h
src/js/scripts/: build_jswrapper.py  wrapper.bat  wrapper.py
